<resources>
    <string name="app_name">iGasVendor</string>
    <string name="terms_and_conditions">Agree to our terms and conditions</string>
    <string name="password">Password</string>
    <string name="name">Business name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="signIn">Already have an account? Sign in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?Sign Up</string>
    <string name="get_business_location">Get Business location</string>
    <string name="gas_brand">Gas brand</string>
    <string name="gas_details">Gas details</string>
    <string name="history">History</string>
    <string name="log_out">Log out</string>
    <string name="exit">Exit</string>
    <string name="accept_order">Accept Order</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="business_details">Business Details</string>
    <string name="set_your_prices">Set your prices</string>
    <string name="_6_kg_price">6 Kg price :</string>
    <string name="_6_kg_with_cylinder">6 Kg with cylinder :</string>
    <string name="_13_kg_price">13 Kg price :</string>
    <string name="_13_kg_with_cylinder">13 Kg with cylinder :</string>
    <string name="update">Update</string>
    <string name="detail">Detail</string>
    <string name="no_orders">There are no orders for you.\nCheck back later</string>
    <string name="no_orders_to_display">No orders to display\n(Finished orders appear here)</string>
    <string name="order">Order</string>
    <string name="click_to_change_address">Click the button below to change address</string>
    <string name="online_status">Online status</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="no_location_set">You have not entered your business location. If you proceed without setting the location, Make sure to get and update your business location, while at your business premises, within the app inorder to get orders</string>
    <string name="show_password">Show Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="_22_5_kg_price">22.5 kg price</string>
    <string name="price">Price</string>
    <string name="_50_kg_price">50 kg price</string>
    <string name="gas_refill">Gas Refill Only</string>
    <string name="cylinder_plus_gas"><![CDATA[Cylinder & Gas]]></string>
    <string name="accessories">Accessories</string>
    <string name="_6_kg_meko_grill">6 kg meko grill</string>
    <string name="_3_kg_meko_grill">3 kg meko grill</string>
    <string name="low_pressure_regulator">Low pressure regulator</string>
    <string name="low_pressure_hose_pipe">Low pressure hose pipe</string>
    <string name="high_pressure_regulator">High pressure regulator</string>
    <string name="high_pressure_hose_pipe">High pressure hose pipe</string>
    <string name="enter_business_prices">
        Enter your business products\n
        and prices here eg.\n
        3kg gas refill - ksh. 650\n
        3kg gas and cylinder - ksh. 2000\n
        3kg meko grill - ksh. 270 e.t.c
    </string>
</resources>
